// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactionHeaderItem should match snapshot 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 35,
        "marginBottom": 5,
        "marginRight": 6,
        "marginTop": 3,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "borderBottomWidth": 2,
        "borderColor": "transparent",
      },
      false,
    ]
  }
>
  <React.Fragment>
    <Connect(Emoji)
      emojiName="smile"
      padding={5}
      size={16}
      textStyle={
        {
          "color": "#000",
          "fontWeight": "bold",
        }
      }
    />
    <Text
      style={
        {
          "color": "#1c58d9",
          "fontSize": 16,
          "marginLeft": 4,
        }
      }
    >
      3
    </Text>
  </React.Fragment>
</TouchableOpacity>
`;

exports[`ReactionHeaderItem should match snapshot, renderContent 1`] = `
<React.Fragment>
  <Connect(Emoji)
    emojiName="smile"
    padding={5}
    size={16}
    textStyle={
      {
        "color": "#000",
        "fontWeight": "bold",
      }
    }
  />
  <Text
    style={
      {
        "color": "#1c58d9",
        "fontSize": 16,
        "marginLeft": 4,
      }
    }
  >
    3
  </Text>
</React.Fragment>
`;

exports[`ReactionHeaderItem should match snapshot, renderContent 2`] = `
<React.Fragment>
  <InjectIntl(FormattedText)
    defaultMessage="All"
    id="mobile.reaction_header.all_emojis"
    style={
      {
        "color": "#1c58d9",
        "fontSize": 16,
        "marginLeft": 4,
      }
    }
  />
  <Text
    style={
      {
        "color": "#1c58d9",
        "fontSize": 16,
        "marginLeft": 4,
      }
    }
  >
    3
  </Text>
</React.Fragment>
`;
